--- a/02_CSS_base/styles.css
+++ b/02_CSS_base/styles.css
@@ -2,11 +2,19 @@ html body{
     margin: 0;
     padding: 0;
     min-width: 1000px;
+    font-family: Arial;
+}
+h2{
+    font-size: 20px;
+    padding: 27px 0 27px 18px ;
+    margin: 0 0 34px;
+    border-bottom: 1px solid #e5e5e5;
 }
 #black-bar{
     background-color: black;
     color: white;
     padding: 20px 0;
+    font-size: 16px;
 }
 #black-bar a{
     color: white;
@@ -29,7 +37,7 @@ html body{
     height: 70px;
 }
 #column-left{
-    background-color: red;
+    background-color: #ffffff;
     width: 250px;
     float: left;
 }
@@ -38,6 +46,12 @@ html body{
     width: 420px;
     margin-left: 20px;
     float: left;
+}
+#central-container{
+    padding-top: 20px;
+    background-color: #f9f9f9;
+    background-image: url('img/central-bg-top.png');
+    background-repeat: repeat-x;
 }
 #central-container .fixed-container{
     overflow-y: hidden;
@@ -51,4 +65,36 @@ html body{
 }
 #special-news{
     margin-top: 20px;
+}
+.news-item{
+    padding-left: 18px;
+    margin-bottom: 27px;
+    font-size: 14px;
+}
+.news-item-text{
+    margin-bottom: 20px;
+}
+.news-item-props a{
+    color: #91919f;
+}
+.news-item-props{
+    font-size: 12px;
+    position: relative;
+}
+.news-time{
+    position: absolute;
+    top: 0;
+    left: 120px;
+    padding-left: 15px;
+    background-image: url(img/icon-time.png);
+    background-repeat: no-repeat;
+    
+}
+.news-comments-count{
+    position: absolute;
+    top: 0;
+    left: 180px;
+    padding-left: 15px;
+    background-image: url(img/icon-comments.png);
+    background-repeat: no-repeat;
 }
