--- a/03_JS_base/DOM/styles.css
+++ b/03_JS_base/DOM/styles.css
@@ -98,3 +98,25 @@ h2{
     background-image: url(img/icon-comments.png);
     background-repeat: no-repeat;
 }
+
+#popup-button{
+    margin: 20px;
+}
+
+#popup-container{
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: gray;
+    opacity: 0.9;
+    z-index: 10;
+}
+
+#popup{
+    width: 200px;
+    height: 300px;
+    background-color: white;
+    padding: 20px;
+    margin: 40px auto;
+}
