--- a/MyCode/notebook/styles.css
+++ b/MyCode/notebook/styles.css
@@ -1,13 +1,35 @@
 #editor-container {
-    position: absolute;
-    top: 100px; /* Высота заголовка, настраивайте по необходимости */
+    position: fixed;
+    top: 60px; /* Высота заголовка, настраивайте по необходимости */
     bottom: 20px; /* Высота подвала, настраивайте по необходимости */
     left: 25px;
     right: 25px;
     background-color: #f0f0f0;
     padding: 0px;
     border-color: black;
+
 }
-#toolbar{
+
+.dropbtn {
+    position: relative;
+    color:black;
     background-color: aqua;
+    border: none;
+    cursor: pointer;
+    font-size: 15px;
 }
+
+
+#toolbar{
+    position: fixed;
+    background-color: aqua;
+    display: flex;/* Используем Flexbox*/
+    justify-content: space-between; /* Равномерно распределяем элементы по всей ширине */
+    align-items: center;         /* Выравниваем элементы по вертикали */
+    padding: 10px; /* Отступы внутри тулбара */  
+    top: 10px;       
+    left: 25px;
+    right: 25px;
+    z-index: 1000;
+}
+
