--- a/MyCode/notebook/sideMenu/styles.css
+++ b/MyCode/notebook/sideMenu/styles.css
@@ -31,6 +31,7 @@ body {
     transform: translateX(-100%);
     transition: transform 0.3s ease;
     padding-top: 80px; /* Отступ сверху, чтобы меню не перекрывало ToolBar */
+    z-index: 10;
 }
 
 .sidebar.active {
